--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-language: java
-
 jdk: 
-    - openjdk11
-    
-script: - mvn clean package
+  - oraclejdk11
+language: java
+script: 
+  - "mvn clean package"
